--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             Generator Password
         </button>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="script2.js"></script>
 </body>
 </html>
